--- a/_includes/about-the-site.html
+++ b/_includes/about-the-site.html
@@ -5,7 +5,7 @@
       <a href="{{ base }}">Today I learned</a> blog.
       <i class='fleuron'></i>
       Follow me on
-      <a href="https://twitter.com/jsadiangabaymd">Twitter</a> for web development snark, and
+      <a href="https://twitter.com/jsadiangabaymd">Twitter</a> for medical snark, and
       <a href="https://instagram.com/jewelsadiangabaymd">Instagram</a> for calligraphy.
     </p>
     <h3 class='identity'><a href="http://www.sadiangabay.com">@jewelsadiangabay</a></h3>
